--- a/utils/patches/patch_RoF2.conf
+++ b/utils/patches/patch_RoF2.conf
@@ -14,23 +14,23 @@ OP_ExploreUnknown=0x0000 used for unknown explorer
 
 # world packets
 # Required to reach Char Select:
-OP_SendLoginInfo=0x11b6
-OP_ApproveWorld=0x7e47
-OP_LogServer=0x19ab
-OP_SendCharInfo=0x06a2
-OP_ExpansionInfo=0x711a
-OP_GuildsList=0x2d38
-OP_EnterWorld=0x57c3
-OP_PostEnterWorld=0x0c3d
+OP_SendLoginInfo=0x7a09				# <- 0x11b6 (1)
+OP_ApproveWorld=0x7499				# <- 0x7e47 (4)
+OP_LogServer=0x7ceb					# <- 0x19ab (3)
+OP_SendCharInfo=0x00d2				# <- 0x06a2 (11)
+OP_ExpansionInfo=0x590d				# <- 0x711a (7)
+OP_GuildsList=0x507A				# <- 0x2d38 (2)
+OP_EnterWorld=0x578f				# <- 0x57c3 (5)
+OP_PostEnterWorld=0x6259			# <- 0x0c3d (6)
 OP_World_Client_CRC1=0x0044
-OP_World_Client_CRC2=0x26df
+OP_World_Client_CRC2=0x0f13			# <- 0x26df (12)
 OP_SendSpellChecksum=0x0000
 OP_SendSkillCapsChecksum=0x0000
 
 # Character Select Related:
-OP_SendMaxCharacters=0x5349
-OP_SendMembership=0x03b2
-OP_SendMembershipDetails=0x0b1f
+OP_SendMaxCharacters=0x5475			# <- 0x5349 (8)
+OP_SendMembership=0x7acc			# <- 0x03b2 (9)
+OP_SendMembershipDetails=0x057b		# <- 0x0b1f (10)
 OP_CharacterCreateRequest=0x006b
 OP_CharacterCreate=0x0afc
 OP_DeleteCharacter=0x0ab4
